@@ -4,6 +4,7 @@ Version 3.00  2011-03-11
  * add fixed block memory pool: common/fast_mblock.c
  * bug fixed: tracker_mem.c do NOT clear g_groups fields
  * bug fixed: slave file and appender file download ok
+ * bug fixed: storage run by group / user, set file owner
 
 Version 2.09  2011-02-19
  * bug fixed: write_to_binlog_index then increase g_binlog_index (feedback 
